# vendly-core

./: .gitignore  LICENSE  README.md  cspell.json
core/: Cargo.toml
core/src/: lib.rs
core/src/tests/user/application/: mod.rs  tests_user_factory.rs
core/src/tests/user/domain/: mod.rs
core/src/tests/user/domain/entities/: mod.rs  tests_user.rs
core/src/tests/user/domain/vo/: mod.rs  test_auth_type.rs  test_consent_type.rs  test_email.rs  test_external_id.rs  test_gender.rs  test_locale.rs  test_occurred_at.rs  test_phone.rs  test_role_name.rs  test_subscription_status.rs  test_subscription_tier.rs  test_timezone.rs  test_user_id.rs  test_user_status.rs  test_username.rs  test_validation_error.rs
core/src/user/application/: mod.rs  user_factory.rs
core/src/user/domain/: mod.rs
core/src/user/domain/aggregates/: mod.rs  user_aggregate.rs
core/src/user/domain/entities/: mod.rs  role.rs  user.rs  user_activity_log.rs  user_auth_method.rs  user_gdpr_consent.rs  user_mfa.rs  user_password.rs  user_profile.rs  user_role.rs  user_session.rs  user_subscription.rs
core/src/user/domain/events/: mod.rs  subscription_renewed.rs  user_activated.rs  user_deleted.rs  user_email_updated.rs  user_email_verified.rs  user_event.rs  user_external_id_linked.rs  user_logged_in.rs  user_phone_assigned.rs  user_phone_verified.rs  user_registered.rs  user_suspended.rs  user_username_assigned.rs
core/src/user/domain/repositories/: role_repository.rs  user_repository.rs
core/src/user/domain/services/: authentication_service.rs  subscription_service.rs  user_registration_service.rs
core/src/user/domain/validations/: errors.rs  mod.rs  regexes.rs
core/src/user/domain/vo/: auth_type.rs  consent_type.rs  email.rs  external_id.rs  gender.rs  id.rs  locale.rs  mod.rs  occurred_at.rs  phone.rs  role_name.rs  status.rs  subscription_status.rs  subscription_tier.rs  timezone.rs  user_status.rs  username.rs  validation_error.rs
core/src/user/infrastructure/messaging/: domain_event_publisher.rs
core/src/user/infrastructure/persistence/orm/: user_repository_seaorm.rs
