[package]
name = "vendly_core"
version = "0.1.0"
description = "Core library for Vendly"
authors = ["JtMe-Code", "JuxnConde"]
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
regex = "1.11.3"
anyhow = "1.0.100"
chrono-tz = "0.10.4"
serde_json = "1.0.145"
chrono = "0.4.42"
async-trait = "0.1.89"
sea-orm = { version = "^1.1.16", features = [
    "macros",
    "runtime-async-std-native-tls",
    "sqlx-postgres",
    "sqlx-mysql",
    "sqlx-sqlite"
] }
argon2 = "0.5.3"
